samples/wig/should_fail/mix_overwrite.wig
variableStep chrom=chr1 span=5
0 100
10 100
20 100
fixedStep chrom=chr1 start=0
1
2
3
4
5
6
7
8
9
